
project(${MODULE_NAME})

set(HASTE_NETWORK_INCLUDE_DIR "${HASTE_INCLUDE_DIR}/network")

file(GLOB HASTE_HEADERS "${HASTE_INCLUDE_DIR}/*.h")
file(GLOB HASTE_NETWORK_HEADERS "${HASTE_NETWORK_INCLUDE_DIR}/*.h")
file(GLOB HASTE_TCP_HEADERS "${HASTE_NETWORK_INCLUDE_DIR}/tcp/*.h")
file(GLOB HASTE_UDP_HEADERS "${HASTE_NETWORK_INCLUDE_DIR}/udp/*.h")

set(HASTE_NETWORK_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/network")
file(GLOB HASTE_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

file(GLOB HASTE_NETWORK_SRCS "${HASTE_NETWORK_SRC_DIR}/*.cpp")
file(GLOB HASTE_TCP_SRCS "${HASTE_NETWORK_SRC_DIR}/tcp/*.cpp")
file(GLOB HASTE_UDP_SRCS "${HASTE_NETWORK_SRC_DIR}/udp/*.cpp")



set(HEADERS 
    ${HASTE_HEADERS}
    ${HASTE_NETWORK_INCLUDE_DIR}
    ${HASTE_TCP_HEADERS}
    ${HASTE_UDP_HEADERS}
)

set(SRCS
    ${HASTE_SRCS}
    ${HASTE_NETWORK_SRC_DIR}
    ${HASTE_TCP_SRCS}
    ${HASTE_UDP_SRCS}
)

add_library(${MODULE_NAME} ${SRCS} ${HEADERS})